--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -8,6 +8,10 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+html, body {
+  height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -21,7 +25,7 @@ h6 {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("/img/bg-masthead.jpg") no-repeat center center;
+  background: url("../images/background.svg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
@@ -104,7 +108,7 @@ header.masthead h1 {
 .call-to-action {
   position: relative;
   background-color: #343a40;
-  background: url("/img/bg-masthead.jpg") no-repeat center center;
+  background: url("/images/background.svg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
