added maps and yaml

--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -133,13 +133,13 @@
 </head>
 
 <body>
-  <div id='wrap'>
+  <div class="height: 100%;">
     <h1>PlanR - Your Vacation Itinerary</h1>
     <h4>No Hassle All fun</h4>
     <button type="button" class="mb-3 btn btn-primary">Export to Google Calendar or Other App</button>
     
-    <div style="display:flex">
-      <div id="map"></div>
+    <div style="height: 100%; display:flex">
+      <div style="width: 1000px;" id="map"></div>
       <div id='calendar'></div>
     </div>
 
